alu/k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alux-frontend-deploy
  labels:
    app: alux-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alux-frontend
  template:
    metadata:
      labels:
        app: alux-frontend
    spec:
      containers:
        - name: alux-frontend
          imagePullPolicy: IfNotPresent
          image: alux-frontend:latest
          ports:
            - containerPort: 80
              name: httpfront
