alu/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alux-backend-svc
spec:
  type: NodePort
  selector:
    app: alux-backend
  ports:
  - name: port-backend
    port: 8000
    nodePort: 30008
    targetPort: httpback
