alu/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alux-frontend-svcs
spec:
  type: NodePort
  selector:
    app: alux-frontend
  ports:
  - name:  port-frontend
    port: 80
    nodePort: 30017
    targetPort: httpfront
