alu/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alux-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alux-frontend-svc
            port: 
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: alux-backend-svc
            port: 
              number: 8000
      # - path: /api
      #   backend:
      #     serviceName: alux-backend-svc
      #     servicePort: 8000
